# RecSys_RL

./: .gitignore  AGENTS.md  README.md  config.py  evaluate.py  main.py  pyproject.toml  train.py
agents/: __init__.py  a2c.py  ppo.py
data/: __init__.py  dataset.py
docs/: 01_intro_recsys.md  02_rl_formulation.md  03_theory_ppo.md  04_theory_a2c.md  05_code_walkthrough.md  06_imitation_agents.md  07_extensions.md  STATUS.md  setup.md
env/: __init__.py  rec_env.py  user_model.py
models/: __init__.py  actor_critic.py
utils/: __init__.py  logger.py  metrics.py
